  * data/templates/gNewSense.info.in,
    data/templates/gNewSense.mirrors:
    - add gNewSense template and mirrors, thanks to Karl Goetz
  * data/templates/Ubuntu.info.in, 
    data/templates/Ubuntu.mirrors:
    - updated for Ubuntu maverick
  * doc/source/conf.py:
    - do not fail on non-digits in the version number
  * utils/get_debian_mirrors.py:
    - ignore mirrors without a county

 -- Michael Vogt <mvo@debian.org>  Tue, 01 Jun 2010 16:20:00 +0200

python-apt (0.7.95) unstable; urgency=low

  [ Julian Andres Klode ]
  * apt/cache.py:
    - Make Cache.get_changes() much (~35x) faster (Closes: #578074).
    - Make Cache.req_reinstall_pkgs much faster as well.
    - Make Cache.get_providing_packages() about 1000 times faster.
    - Use has_versions and has_provides from apt_pkg.Package where possible.
  * apt/package.py:
    - Decode using utf-8 in installed_files (LP: #407953).
    - Fix fetch_source() to work when source name = binary name (LP: #552400).
    - Merge a patch from Sebastian Heinlein to make get_changelog() only
      check sources where source version >= binary version (Closes: #581831).
    - Add Version.source_version and enhance Sebastian's patch to make use
      of it, in order to find the best changelog for the package.
  * python:
    - Return bool instead of int to Python where possible, looks better.
    - Document every class, function, property.
  * python/cache.cc:
    - Check that 2nd argument to Cache.update() really is a SourceList object.
    - Fix PackageFile.not_automatic to use NotAutomatic instead of NotSource.
    - Add Package.has_versions to see which packages have at least one version,
      and Package.has_provides for provides.
    - Add rich compare methods to the Version object.
  * python/generic.cc:
    - Fix a memory leak when using old attribute names.
    - Map ArchiveURI property to archive_uri
  * python/progress.cc:
    - Do not pass arguments to InstallProgress.wait_child().
  * doc: