@@ -30,5 +30,14 @@ class TestAptCache(unittest.TestCase):
                         self.assertTrue(isinstance(dep.relation, str))
                         self.assertTrue(dep.pre_depend in (True, False))
 
+                # accessing record should take a reasonable time; in
+                # particular, when using compressed indexes, it should not use
+                # tons of seek operations
+                r = pkg.candidate.record
+                self.assertEqual(r['Package'], pkg.name)
+                self.assert_('Version' in r)
+                self.assert_(len(r['Description']) > 0)
+                self.assert_(str(r).startswith('Package: %s\n' % pkg.name))
+
 if __name__ == "__main__":
     unittest.main()
