@@ -12,6 +12,13 @@ python-apt (0.7.96) UNRELEASED; urgency=low
   * utils/get_debian_mirrors.py:
     - ignore mirrors without a county
 
+  [ Martin Pitt ]
+  * tests/test_apt_cache.py: Test accessing the record of all packages during
+    iteration. This both ensures that it's well-formatted and structured, and
+    also that accessing it does not take an inordinate amount of time. This
+    exposes a severe performance problem when using gzip compressed package
+    indexes.
+
  -- Michael Vogt <mvo@debian.org>  Tue, 01 Jun 2010 16:20:00 +0200
 
 python-apt (0.7.95) unstable; urgency=low
